Fix text alignment bug in the footer section.

--- a/style.css
+++ b/style.css
@@ -220,8 +220,10 @@ p.text-medium.text-content{
 }
 .footer .info{
     color:gray;
+    display:block;
     margin-top: 15px;
     font-size: 16px;
+    width:fit-content;
 }
 /* Medium screen */
 @media screen and (max-width:992px) {
